Att Henrique 20.04, ver 1.0

--- a/miniChallenge/database.plist
+++ b/miniChallenge/database.plist
@@ -41,6 +41,27 @@
 							</dict>
 						</array>
 					</dict>
+					<dict>
+						<key>subjectName</key>
+						<string>Biology</string>
+						<key>questionsList</key>
+						<array>
+							<dict>
+								<key>questionID</key>
+								<integer>1</integer>
+								<key>Alternatives</key>
+								<array>
+									<string>Option 1</string>
+									<string>Option 2</string>
+									<string>Option 3</string>
+									<string>Option 4</string>
+									<string>Option 5</string>
+								</array>
+								<key>Hint</key>
+								<string>Comets volume depend on...</string>
+							</dict>
+						</array>
+					</dict>
 				</array>
 			</dict>
 			<dict>
