--- a/miniChallenge/database.plist
+++ b/miniChallenge/database.plist
@@ -242,7 +242,7 @@
 						<string>Geography</string>
 						<key>subjectNamePt</key>
 						<string>Geografia</string>
-						<key>questionList</key>
+						<key>questionsList</key>
 						<dict>
 							<key>Item 0</key>
 							<dict>
@@ -303,7 +303,7 @@
 									<string>America</string>
 								</dict>
 								<key>questionChoicesPt</key>
-								<string></string>
+								<dict/>
 								<key>questionHint</key>
 								<string></string>
 								<key>questionHintPt</key>
@@ -354,8 +354,7 @@
 						<key>subjectNamePt</key>
 						<string>Ciência</string>
 						<key>questionsList</key>
-						<dict>
-							<key>Item 0</key>
+						<array>
 							<dict>
 								<key>question</key>
 								<string>What is the biggest planet from Solar System?</string>
@@ -383,10 +382,9 @@
 								<key>questionHintPt</key>
 								<string></string>
 							</dict>
-							<key>Item 1</key>
 							<dict>
 								<key>question</key>
-								<string>Wich planets can be viewed by naked eye?</string>
+								<string>Which planets can be viewed by naked eye?</string>
 								<key>questionPt</key>
 								<string></string>
 								<key>questionValue</key>
@@ -411,7 +409,6 @@
 								<key>questionHintPt</key>
 								<string></string>
 							</dict>
-							<key>Item 2</key>
 							<dict>
 								<key>question</key>
 								<string>How many planets exist in the Solar System?</string>
@@ -439,7 +436,7 @@
 								<key>questionHintPt</key>
 								<string></string>
 							</dict>
-						</dict>
+						</array>
 					</dict>
 				</array>
 			</dict>
@@ -674,91 +671,6 @@
 				<integer>720</integer>
 				<key>itemPosY</key>
 				<integer>490</integer>
-				<key>subjectsList</key>
-				<array>
-					<dict>
-						<key>subjectName</key>
-						<string>Art</string>
-						<key>subjectNamePt</key>
-						<string>Ciência</string>
-						<key>questionsList</key>
-						<array>
-							<dict>
-								<key>question</key>
-								<string>Is the Sun a planet or a star?</string>
-								<key>questionPt</key>
-								<string>O sol é um planeta ou uma estrela?</string>
-								<key>questionValue</key>
-								<integer>100</integer>
-								<key>questionID</key>
-								<integer>1</integer>
-								<key>questionChoices</key>
-								<array>
-									<string>Star</string>
-									<string>Planet</string>
-								</array>
-								<key>questionChoicesPt</key>
-								<array>
-									<string>Estrela</string>
-									<string>Planeta</string>
-								</array>
-								<key>questionHint</key>
-								<string>Planets orbit around hot celestial bodies called stars.</string>
-								<key>questionHintPt</key>
-								<string>Planetas orbitam em volta de corpos celestiais quentes chamados estrelas.</string>
-							</dict>
-						</array>
-					</dict>
-					<dict>
-						<key>subjectName</key>
-						<string>ED</string>
-						<key>subjectNamePt</key>
-						<string>Portuguese</string>
-						<key>questionsList</key>
-						<array>
-							<dict>
-								<key>question</key>
-								<string>What is called a group of stars?</string>
-								<key>questionPt</key>
-								<string>Como se chama um conjunto de estrelas?</string>
-								<key>questionValue</key>
-								<integer>100</integer>
-								<key>questionID</key>
-								<integer>1</integer>
-								<key>questionChoices</key>
-								<array>
-									<string>Constellation</string>
-									<string>Galaxy</string>
-									<string>Universe</string>
-									<string>Solar System</string>
-									<string>Nebula</string>
-								</array>
-								<key>questionChoicesPt</key>
-								<array>
-									<string>Constelação</string>
-									<string>Galáxia</string>
-									<string>Universo</string>
-									<string>Sistema Solar</string>
-									<string>Nébula</string>
-								</array>
-								<key>questionHint</key>
-								<string>Andromeda é um exemplo famoso de grupo de estrelas.</string>
-								<key>questionHintPt</key>
-								<string>Andromeda is a famous example of a group of stars.</string>
-							</dict>
-						</array>
-					</dict>
-				</array>
-			</dict>
-			<dict>
-				<key>itemName</key>
-				<string>Moon</string>
-				<key>itemNamePt</key>
-				<string>Lua</string>
-				<key>itemPosX</key>
-				<integer>285</integer>
-				<key>itemPosY</key>
-				<integer>225</integer>
 				<key>subjectsList</key>
 				<array>
 					<dict>
