--- a/miniChallenge/database.plist
+++ b/miniChallenge/database.plist
@@ -39,19 +39,15 @@
 								<key>questionID</key>
 								<string></string>
 								<key>questionChoices</key>
-								<dict>
-									<key>Item 0</key>
+								<array>
 									<string>Correct</string>
-									<key>Item 1</key>
 									<string>Incorrect</string>
-								</dict>
+								</array>
 								<key>questionChoicesPt</key>
-								<dict>
-									<key>Item 1</key>
+								<array>
 									<string>Correta</string>
-									<key>Item 2</key>
 									<string>Errada</string>
-								</dict>
+								</array>
 								<key>questionHint</key>
 								<string></string>
 								<key>questionHintPt</key>
@@ -132,27 +128,19 @@
 								<key>questionID</key>
 								<string></string>
 								<key>questionChoices</key>
-								<dict>
-									<key>Item 0</key>
+								<array>
 									<string>Heliocentrism</string>
-									<key>Item 1</key>
 									<string>Suncentrism</string>
-									<key>Item 2</key>
 									<string>Sunerism</string>
-									<key>Item 3</key>
 									<string>Geocentrism</string>
-								</dict>
+								</array>
 								<key>questionChoicesPt</key>
-								<dict>
-									<key>Item 0</key>
+								<array>
 									<string>Heliocentrismo</string>
-									<key>Item 1</key>
 									<string>Solcentrismo</string>
-									<key>Item 2</key>
 									<string>Solarismo</string>
-									<key>Item 3</key>
 									<string>Geocentrismo</string>
-								</dict>
+								</array>
 								<key>questionHint</key>
 								<string></string>
 								<key>questionHintPt</key>
@@ -168,27 +156,19 @@
 								<key>questionID</key>
 								<integer>3</integer>
 								<key>questionChoices</key>
-								<dict>
-									<key>Item 0</key>
+								<array>
 									<string>Egyptian</string>
-									<key>Item 1</key>
 									<string>Aztecs</string>
-									<key>Item 2</key>
 									<string>Maya</string>
-									<key>Item 3</key>
 									<string>Greek</string>
-								</dict>
+								</array>
 								<key>questionChoicesPt</key>
-								<dict>
-									<key>Item 0</key>
+								<array>
 									<string>Egípcios</string>
-									<key>Item 1</key>
 									<string>Maias</string>
-									<key>Item 2</key>
 									<string>Aztecas</string>
-									<key>Item 3</key>
 									<string>Gregos</string>
-								</dict>
+								</array>
 								<key>questionHint</key>
 								<string></string>
 								<key>questionHintPt</key>
@@ -254,27 +234,19 @@
 								<key>questionID</key>
 								<string></string>
 								<key>questionChoices</key>
-								<dict>
-									<key>Item 0</key>
+								<array>
 									<string>Translation</string>
-									<key>Item 1</key>
 									<string>Rotation</string>
-									<key>Item 2</key>
 									<string>Circulation</string>
-									<key>Item 3</key>
 									<string>Stroll</string>
-								</dict>
+								</array>
 								<key>questionChoicesPt</key>
-								<dict>
-									<key>Item 0</key>
+								<array>
 									<string>Translação</string>
-									<key>Item 1</key>
 									<string>Circulação</string>
-									<key>Item 2</key>
 									<string>Passeio</string>
-									<key>Item 3</key>
 									<string>Rotação</string>
-								</dict>
+								</array>
 								<key>questionHint</key>
 								<string></string>
 								<key>questionHintPt</key>
@@ -290,16 +262,12 @@
 								<key>questionID</key>
 								<string></string>
 								<key>questionChoices</key>
-								<dict>
-									<key>Item 0</key>
+								<array>
 									<string>Asia</string>
-									<key>Item 1</key>
 									<string>Europe</string>
-									<key>Item 2</key>
 									<string>Africa</string>
-									<key>Item 3</key>
 									<string>America</string>
-								</dict>
+								</array>
 								<key>questionChoicesPt</key>
 								<string></string>
 								<key>questionHint</key>
@@ -317,27 +285,19 @@
 								<key>questionID</key>
 								<string></string>
 								<key>questionChoices</key>
-								<dict>
-									<key>Item 0</key>
+								<array>
 									<string>6</string>
-									<key>Item 1</key>
 									<string>5</string>
-									<key>Item 2</key>
 									<string>7</string>
-									<key>Item 3</key>
 									<string>8</string>
-								</dict>
+								</array>
 								<key>questionChoicesPt</key>
-								<dict>
-									<key>Item 0</key>
+								<array>
 									<string>6</string>
-									<key>Item 1</key>
 									<string>5</string>
-									<key>Item 2</key>
 									<string>7</string>
-									<key>Item 3</key>
 									<string>8</string>
-								</dict>
+								</array>
 								<key>questionHint</key>
 								<string></string>
 								<key>questionHintPt</key>
@@ -362,18 +322,14 @@
 								<key>questionID</key>
 								<string></string>
 								<key>questionChoices</key>
-								<dict>
-									<key>Item 0</key>
+								<array>
 									<string>Jupiter</string>
-									<key>Item 1</key>
 									<string>Saturn</string>
-									<key>Item 2</key>
 									<string>Neptune</string>
-									<key>Item 3</key>
 									<string>Earth</string>
-								</dict>
+								</array>
 								<key>questionChoicesPt</key>
-								<dict/>
+								<array/>
 								<key>questionHint</key>
 								<string></string>
 								<key>questionHintPt</key>
@@ -389,18 +345,14 @@
 								<key>questionID</key>
 								<string></string>
 								<key>questionChoices</key>
-								<dict>
-									<key>Item 0</key>
+								<array>
 									<string>Jupiter, Mercury, Mars, Venus, Saturn</string>
-									<key>Item 1</key>
 									<string>Mars, Venus, Neptune, Sun, Saturn</string>
-									<key>Item 2</key>
 									<string>Mars, Neptune, Venus, Mercury, Uranus</string>
-									<key>Item 3</key>
 									<string>Neptune, Jupiter, Saturn, Uranus, Pluto</string>
-								</dict>
+								</array>
 								<key>questionChoicesPt</key>
-								<dict/>
+								<array/>
 								<key>questionHint</key>
 								<string></string>
 								<key>questionHintPt</key>
@@ -416,18 +368,14 @@
 								<key>questionID</key>
 								<string></string>
 								<key>questionChoices</key>
-								<dict>
-									<key>Item 0</key>
+								<array>
 									<string>7</string>
-									<key>Item 1</key>
 									<string>8</string>
-									<key>Item 2</key>
 									<string>9</string>
-									<key>Item 3</key>
 									<string>10</string>
-								</dict>
+								</array>
 								<key>questionChoicesPt</key>
-								<dict/>
+								<array/>
 								<key>questionHint</key>
 								<string></string>
 								<key>questionHintPt</key>
